syntax = "proto3";

package hello.v1;

option go_package = "github.com/myorg/grpc-web-demo/gen/hello/v1;hellov1";

// Simple greeter service
service GreeterService {
  // Say hello
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
  
  // Stream hellos (server streaming)
  rpc SayHelloStream(SayHelloRequest) returns (stream SayHelloResponse);
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
  int32 count = 2;
}
